--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@
 			<div class="col-md-10 mx-auto">
 				<p>I'm coding software architect with solid management background. I have been crafting software professionally for over 25 years. I'm most experienced
 					in JVM ecosystem (Java programming language) but I'm not stranger to modern JavaScript Web development and DevOps related issues.</p>
+				<p>
+					Currently I hold a CTO position at <a href="https://empirica.io">Empirica</a> - algorithmic trading solutions provider.
+				</p>
 				<p>Several years ago something important happened to me - I met functional programming. It changed my perspective so much, that I don't want to get back
 					to my old habits.</p>
 			</div>
