--- a/about.html
+++ b/about.html
@@ -63,6 +63,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10 mx-auto">
+				<p class="text-center">
+					<img class="img-fluid" src="../img/me-400x400.png" />
+				</p>
 				<p>I'm coding software architect with solid management background. I have been crafting software professionally for over 25 years. I'm most experienced
 					in JVM ecosystem (Java programming language) but I'm not stranger to modern JavaScript Web development and DevOps related issues.</p>
 				<p>
