update label contact

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="post.html">Sample Post</a>
-          </li>
-          <li class="nav-item"> -->
+          </li> -->
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
