add new image bg

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/IMG_0157.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
