Add image to post.html

--- a/post.html
+++ b/post.html
@@ -78,19 +78,19 @@
 
           <p>Software development, without a doubt, has empowered me. However, it has also given me a huge burden. I feel a tremendous responsibility to do something meaningful with this superpower, and I haven’t yet. Part of me thinks that by hiding behind the thought of not being a good enough coder I have relieved myself of this fear of not living up to my own expectations. This means I haven’t taken risks I wish I had to try and actually become the “superhero” a younger me would be proud of. I feel tormented because I have hidden my talents and never put my money on the table out of my own fear. To this day I work to change this mindset day by day.</p>
 
-          <!-- <a href="#">
-            <img class="img-fluid" src="img/elevator.jpg" alt="">
-          </a> -->
-          <video width="640" height="480" controls>
+          <a href="#">
+            <img class="img-fluid" src="img/2161.jpg" alt="">
+          </a>
+          <!-- <video width="640" height="480" controls>
             <source src="/video/gaby_angie.mov" type=video/mov>
-          </video>
-          <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
+          </video> -->
+          <span class="caption text-muted">My family! From left to right, Linda my older sister, me, Gabriel my dad, Janet my mom, Gaby my little sister (now a sophomore at ND), and Olivia my oldest sister.</span>
 
           <p>Because I feel so strongly about the great responsibility and obligation that comes with this superpower, I find the different frameworks we read about and debated in class essential to this line of work. It can be tough to think about the very difficult situations that can arise with ethical dilemmas, especially in programming. No one guidebook or framework will tell you exactly what the best course of action is in a difficult situation— maximize good over bad? Focus on the intention of the action? On the consequences alone? It can be hard!</p>
 
           <p>It has been a slow and challenging journey for me to continuously strive to be a better person. However, I truly believe that I work every day to become the type of woman I looked up to when I was a girl, and that my best and most ambitious project— my life— would make my parents proud. When I think about the tough ethical dilemmas I have had to face in my short 21 years, I realize that most of the time I come back to them— my family and young me— and reflect on how they would feel about my decision. Would they be proud? I say most of the time because there have been situations when I forget to stop and reflect and have made the wrong choices. Nevertheless, even after the worst situations pass, I come back to them again and hope that I can make a better choice in the future. </p>
 
-          
+
         </div>
       </div>
     </div>
