--- a/post.html
+++ b/post.html
@@ -79,7 +79,7 @@
           <p>Software development, without a doubt, has empowered me. However, it has also given me a huge burden. I feel a tremendous responsibility to do something meaningful with this superpower, and I haven’t yet. Part of me thinks that by hiding behind the thought of not being a good enough coder I have relieved myself of this fear of not living up to my own expectations. This means I haven’t taken risks I wish I had to try and actually become the “superhero” a younger me would be proud of. I feel tormented because I have hidden my talents and never put my money on the table out of my own fear. To this day I work to change this mindset day by day.</p>
 
           <a href="#">
-            <img class="img-fluid" src="img/2161.jpg" alt="">
+            <img class="img-fluid" src="img/IMG_2161.jpeg" alt="">
           </a>
           <!-- <video width="640" height="480" controls>
             <source src="/video/gaby_angie.mov" type=video/mov>
