RSS feed file addition

--- a/post.html
+++ b/post.html
@@ -82,7 +82,7 @@
             <img class="img-fluid" src="img/IMG_2161.jpeg" alt="">
           </a>
           <!-- <video width="640" height="480" controls>
-            <source src="/video/gaby_angie.mov" type=video/mov>
+            <source src="video/gaby_angie.mov" type=video/mov>
           </video> -->
           <span class="caption text-muted">My family! From left to right, Linda my older sister, me, Gabriel my dad, Janet my mom, Gaby my little sister (now a sophomore at ND), and Olivia my oldest sister.</span>
 
