--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@
                 </span>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-rss-f fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
           </ul>
           <p class="copyright text-muted">Copyright &copy; Angelica Franco 2019</p>
         </div>
