add video header attempt 2

--- a/post.html
+++ b/post.html
@@ -52,7 +52,7 @@
   <!-- Page Header -->
   <header class="masthead">
   <!-- <header class="masthead" style="background-image: url('img/elevator.jpg')"> -->
-    <div class="overlay"></div>
+    <!-- <div class="overlay"></div>  -->
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source src="video/gaby_angie.mov" type="video/mp4">
     </video>
