--- a/post.html
+++ b/post.html
@@ -50,12 +50,8 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead">
-  <!-- <header class="masthead" style="background-image: url('img/elevator.jpg')"> -->
-    <!-- <div class="overlay"></div>  -->
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="video/gaby_angie.mov" type="video/mp4">
-    </video>
+  <header class="masthead" style="background-image: url('img/IMG_2846.jpg')">
+    <div class="overlay"></div> 
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
