--- a/writing01.html
+++ b/writing01.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/IMG_2137.jpg')">
+  <header class="masthead" style="background-image: url('img/IMG_2137.jpeg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -74,7 +74,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>There is a very specific type of profile people usually picture when they think about coders or “hackers”. Because of the nature of computer programming, the way people think of people who have the ability to write code is what has been portrayed by the mainstream media. On the other hand, my very own engineering classmates see me in a totally different light. Like some of the readings, they share the feeling that computer science students are not deserving of the title of “Engineer” because what we do is so different than what they do, and our way of accomplishing our goals is unconventional from any other type of engineering process. The fact that our creative process is iterative as opposed to empirical makes it seems to them as if it were less of an engineering process and more like an improvisation one. </p>
           <a href="#">
-            <img class="img-fluid" src="img/mr.robot.0.jpg" alt="">
+            <img class="img-fluid" src="img/mr_robot.jpg" alt="">
           </a>
           <span class="caption text-muted">Mr. Robot-- A hollywood Hacker classic</span>
 
