edit contact me and about

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>About Me - Angelica Franco</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -50,14 +50,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/about-me-bg.jpeg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <span class="subheading">A hard working mess</span>
           </div>
         </div>
       </div>
@@ -68,9 +68,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>Born in Villavicencio, Colombia, Angelica seeks to use the privileged opportunity she has been given to attend the University of Notre Dame to change perspectives, break glass ceilings, exceed expectations, and empower those around her with her Computer Science education. Her passion for technology has been steadily growing from a young age and thanks to her parents she always believed there was no reason for her to limit her dreams. This semester she will be using this website as a blog for her Ethical and Professional Issues classes to post weekly reflections on conversation-mustering topics. </p>
       </div>
     </div>
   </div>
