--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Contact Me - Angelica Franco</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Contact Me</h1>
-            <span class="subheading">Have questions? I have answers.</span>
+            <span class="subheading">Talk to me.</span>
           </div>
         </div>
       </div>
