--- a/writing01.html
+++ b/writing01.html
@@ -84,7 +84,7 @@
             <img class="img-fluid" src="img/col.png" alt="">
           </a>
           <span class="caption text-muted">Internet (ethernet) access at home by region in Colombia based on a 2018 census performed by the Ministry of Technology and Communication. </span>
-          
+
           <p>But to ignore where I come from and why I am at Notre Dame would be a disservice to myself and those around me. I want to embody the true definition of a hacker when I go out into the workforce. Nevertheless, I have to be true to the fact that I can offer much more than just good code to a company. I did not have the same upbringing as the men in the tech industry I look up to so much. I come from a small city in Colombia called Villavicencio. In most parts of the state where this city is located, people barely have access to 2G mobile technology. In fact, in the whole region, internet access in the homes is at a staggering 11,2%. I was the first person from this region of Colombia to attend Notre Dame. It seems unfair that I dismiss this fact, or get sidetracked when thinking about my future, because suddenly I have a revolving door of opportunities I never even dreamed of here at Notre Dame. I owe to myself to think about my country and my heritage when looking to the future. I don’t come from a region of privilege. I don’t even come from a family you can call privileged. Nevertheless, I have come to realize that I am privileged because I am here. I have to do something greater with the opportunities I have been given. And I hope that whatever I do I can be content with knowing, at the end of my life, that it was something meaningful, not only for me, but for everyone who came before me.</p>
 
 
@@ -104,7 +104,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/itsgigihello">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/angelica.franco.4">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/angiefranco">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -128,10 +128,10 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="http://feeds.feedburner.com/angelicafrancoh">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-rss fa-stack-1x fa-inverse"></i>
+                  <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
