--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-me-bg.jpeg')">
+  <header class="masthead" style="background-image: url('img/about-me.jpeg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
