--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/scuba.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
