--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="http://feeds.feedburner.com/angelicafrancoh">
+              <a href="http://feeds.feedburner.com/angelicafrancoh" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
