--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Ethical and Professional Issues Blog</h1>
+            <h1>A Blog On Ethics & Professional Issues</h1>
             <span class="subheading">Tabs over Spaces with Angie</span>
           </div>
         </div>
