update links, open in new tab

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="https://twitter.com/itsgigihello">
+              <a href="https://twitter.com/itsgigihello" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/angelica.franco.4">
+              <a href="https://www.facebook.com/angelica.franco.4" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/angiefranco">
+              <a href="https://github.com/angiefranco" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="http://feeds.feedburner.com/angelicafrancoh">
+              <a href="http://feeds.feedburner.com/angelicafrancoh" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-rss fa-stack-1x fa-inverse"></i>
