added all routes; html links edited

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/html">
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/html'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
@@ -36,16 +36,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Início</a>
+            <a class="nav-link" href="/">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Sobre mim</a>
+            <a class="nav-link" href="sobre">Sobre mim</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Posts</a>
+            <a class="nav-link" href="posts">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contato</a>
+            <a class="nav-link" href="contato">Contato</a>
           </li>
         </ul>
       </div>
@@ -173,7 +173,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+          <p class="copyright text-muted">&copy; 2019</p>
         </div>
       </div>
     </div>
