--- a/post.html
+++ b/post.html
@@ -62,8 +62,8 @@
             <h1>Man must explore, and this is exploration at its greatest</h1>
             <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
             <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
+              <a href="#">Doang J</a>
+              on March 3, 2020</span>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+          <p class="copyright text-muted">Copyright &copy; My site 2020</p>
         </div>
       </div>
     </div>
