--- a/post.html
+++ b/post.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="post.html">My Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
