Integrated Share-This plugin and added reaction buttons.

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 
 
         <!-- Pager -->        
+        <div class="sharethis-inline-share-buttons"></div>
       </div>
     </div>
   </div>
